2017.4/_sources/plugins/available/feature-table/index.txt
feature-table
=============

.. raw:: html

   <table class="table plugin-info">
     <tbody>
       <tr>
         <th scope="row">Description</th>
         <td>
         	
         	This is a QIIME 2 plugin supporting operations on sample x feature tables, such as filtering, merging, and transforming tables.<br/>
         	
         </td>
       </tr>
       <tr>
         <th scope="row">Version</th>
         <td>2017.4.0</td>
       </tr>
       <tr>
         <th scope="row">Website</th>
         <td><a href="https://github.com/qiime2/q2-feature-table">https://github.com/qiime2/q2-feature-table</a></td>
       </tr>
       <tr>
         <th scope="row">Support</th>
         <td>
           
           No user support information available. See plugin website: <a href="https://github.com/qiime2/q2-feature-table">https://github.com/qiime2/q2-feature-table</a><br/>
           
         </td>
       </tr>
       <tr>
         <th scope="row">Citation</th>
         <td>
           
           The Biological Observation Matrix (BIOM) format or: how I learned to stop worrying and love the ome-ome. Daniel McDonald, Jose C Clemente, Justin Kuczynski, Jai Ram Rideout, Jesse Stombaugh, Doug Wendel, Andreas Wilke, Susan Huse, John Hufnagle, Folker Meyer, Rob Knight and J Gregory Caporaso. GigaScience 1:7 (2012).doi:10.1186/2047-217X-1-7<br/>
           
         </td>
       </tr>
     </tbody>
   </table>

Methods
-------


.. toctree::
   :maxdepth: 1

   
   filter_features
   
   filter_samples
   
   merge
   
   merge_seq_data
   
   merge_taxa_data
   
   presence_absence
   
   rarefy
   
   relative_frequency
   


Visualizers
-----------


.. toctree::
   :maxdepth: 1

   
   summarize
   
   tabulate_seqs
   
